# everything-claude-code

./: .agentshieldignore.json  .git-blame-ignore-revs  .gitignore  .secrets.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  dist.toml  index.d.ts  install.sh  mutants.toml  package-lock.json  package.json  release-plz.toml  rust-toolchain.toml  tsconfig.build.json  tsconfig.json
crates/ecc-app/: Cargo.toml
crates/ecc-app/src/: act_ci.rs  analyze.rs  audit.rs  audit_web.rs  backlog.rs  bypass_mgmt.rs  commit_lint.rs  config.rs  config_cmd.rs  cost_mgmt.rs  detect.rs  dev.rs  diagnostics.rs  diagram_triggers.rs  docs_coverage.rs  docs_update_summary.rs  drift_check.rs  ecc_config.rs  ecc_status.rs  install.rs  integration.rs  lib.rs  log_mgmt.rs  merge.rs  metrics_mgmt.rs  metrics_session.rs  session.rs  smart_merge.rs  sources.rs  validate.rs  validate_cartography.rs  validate_claude_md.rs  validate_design.rs  validate_spec.rs  version.rs  worktree.rs
crates/ecc-app/src/backlog/: index.rs  migration.rs  mod.rs  status.rs
crates/ecc-app/src/claw/: claude_runner.rs  dispatch.rs  error.rs  handlers.rs  mod.rs  skill_loader.rs  storage.rs
crates/ecc-app/src/config/: audit.rs  clean.rs  detect.rs  error.rs  gitignore.rs  manifest.rs  merge.rs  mod.rs
crates/ecc-app/src/detection/: framework.rs  language.rs  mod.rs  package_manager.rs
crates/ecc-app/src/dev/: format.rs  mod.rs  status.rs  switch.rs  switch_tests.rs  toggle.rs
crates/ecc-app/src/hook/: bypass_handling.rs  bypass_interceptor.rs  dispatch.rs  errors.rs  hook_tests.rs  mod.rs
crates/ecc-app/src/install/: error.rs  global.rs  helpers.rs  hooks_migration.rs  init.rs  mod.rs  resolve.rs
crates/ecc-app/src/memory/: consolidation.rs  crud.rs  file_prune.rs  injection.rs  lifecycle.rs  migration.rs  mod.rs  paths.rs  trash_gc.rs
crates/ecc-app/src/merge/: error.rs  helpers.rs  helpers_tests.rs  mod.rs  prompt.rs
crates/ecc-app/src/session/: aliases.rs  mod.rs  tests.rs
crates/ecc-app/src/update/: context.rs  error_tests.rs  happy_path_tests.rs  mod.rs  options.rs  orchestrator.rs  orchestrator_tests.rs  rollback_tests.rs  summary.rs  swap.rs
crates/ecc-app/src/validate/: agents.rs  code_block_scanning.rs  commands.rs  conventions.rs  cross_ref_validation.rs  frontmatter_validation.rs  hooks.rs  mod.rs  paths.rs  patterns.rs  patterns_tests.rs  rules.rs  section_validation.rs  skills.rs  statusline.rs  teams.rs  tool_manifest_loader.rs  tool_manifest_path_resolver.rs
crates/ecc-app/src/workflow/: mod.rs  recover.rs  state_resolver.rs
crates/ecc-app/src/worktree/: checker.rs  gc.rs  heartbeat.rs  mod.rs  self_identity.rs  shell_manager.rs  status.rs
crates/ecc-app/tests/: act_ci_integration.rs  cartography_corpus.rs  ecc_root_integration.rs  observable_logging.rs
crates/ecc-cli/: Cargo.toml
crates/ecc-cli/src/: lib.rs  main.rs
crates/ecc-cli/src/commands/: analyze.rs  audit.rs  audit_cache.rs  audit_web.rs  backlog.rs  bypass.rs  claw.rs  commit_cmd.rs  config.rs  cost.rs  dev.rs  diagram.rs  docs.rs  drift.rs  hook.rs  init.rs  install.rs  log.rs  memory.rs  metrics.rs  mod.rs  sources.rs  status.rs  update.rs  validate.rs  version.rs  workflow.rs  worktree.rs
crates/ecc-cli/tests/: cli_phase4_tests.rs  integration_tests.rs
crates/ecc-domain/: Cargo.toml
crates/ecc-domain/src/: ansi.rs  architecture.rs  lib.rs  paths.rs  time.rs  traits.rs  worktree.rs
crates/ecc-domain/src/analyze/: bus_factor.rs  changelog.rs  commit.rs  coupling.rs  error.rs  hotspot.rs  (+1 more)
crates/ecc-domain/tests/: direction.rs  domain_purity.rs  error_tests.rs  lifecycle.rs  policy.rs  resolver.rs
crates/ecc-infra/: Cargo.toml
crates/ecc-infra/src/: bypass_schema.rs  cost_schema.rs  file_cache_store.rs  file_config_store.rs  flock_lock.rs  fs_backlog.rs  git_log_adapter.rs  github_release.rs  lib.rs  local_llm_health.rs  log_schema.rs  metrics_schema.rs  os_env.rs  os_fs.rs  os_git.rs  os_worktree.rs  process_executor.rs  rustyline_input.rs  shell_worktree.rs  sqlite_bypass_store.rs  sqlite_cost_store.rs  sqlite_log_store.rs  sqlite_memory.rs  sqlite_metrics_store.rs  std_terminal.rs  system_clock.rs  tarball_extractor.rs
crates/ecc-integration-tests/: .ecc-merge-recovery  Cargo.toml
crates/ecc-integration-tests/src/: lib.rs
crates/ecc-integration-tests/tests/: audit_flow.rs  cartography_validate.rs  characterization_session_hooks.rs  characterization_typed_merge.rs  characterization_workflow_lifecycle.rs  characterization_worktree_isolation.rs  clean_flow.rs  cli_parsing.rs  cli_validate_cartography.rs  hook_dispatch.rs  hook_parity.rs  init_flow.rs  install_flow.rs  shell_worktree_manager_real_git.rs  sources_flow.rs  tool_manifest_docs.rs  tool_manifest_propagation.rs  validate_claude_md_markers.rs  validate_design_flow.rs  validate_flow.rs  validate_spec_flow.rs  version_completion.rs  workflow_cli_parity.rs  workflow_lifecycle.rs  worktree_gc.rs  worktree_gc_concurrent.rs
crates/ecc-ports/: Cargo.toml
crates/ecc-ports/src/: backlog.rs  bypass_store.rs  cache_store.rs  clock.rs  config_store.rs  cost_store.rs  env.rs  extract.rs  fs.rs  git.rs  git_log.rs  lib.rs  lock.rs  log_store.rs  memory_store.rs  metrics_store.rs  release.rs  repl.rs  shell.rs  stdin.rs  terminal.rs  worktree.rs
crates/ecc-workflow/: Cargo.toml
crates/ecc-workflow/src/: io.rs  lib.rs  main.rs  output.rs  slug.rs  time.rs
crates/ecc-workflow/tests/: action_log_contention.rs  artifacts.rs  backlog.rs  backlog_contention.rs  doc.rs  e2e.rs  hooks.rs  init.rs  init_foundation.rs  integration.rs  memory_lock_contention.rs  memory_write.rs  phase_gate.rs  state_lock_contention.rs  status.rs  transition.rs  worktree_memory_path.rs  worktree_name.rs
ecc-rs/: Cargo.toml
ecc-rs/crates/ecc-app/: Cargo.toml
ecc-rs/crates/ecc-cli/: Cargo.toml
ecc-rs/crates/ecc-domain/: Cargo.toml
ecc-rs/crates/ecc-infra/: Cargo.toml
ecc-rs/crates/ecc-ports/: Cargo.toml
ecc-rs/crates/ecc-test-support/: Cargo.toml
ecc-rs/npm/ecc/: package.json
ecc-rs/npm/ecc-darwin-arm64/: package.json
(+1825 files in other folders)
