[workspace]
resolver = "2"
members = [
    "crates/ecc-domain",
    "crates/ecc-ports",
    "crates/ecc-app",
    "crates/ecc-infra",
    "crates/ecc-cli",
    "crates/ecc-test-support",
    "crates/ecc-integration-tests",
    "crates/ecc-workflow",
    "crates/ecc-flock",
    "xtask",
]

[workspace.package]
version = "4.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/LEBOCQTitouan/everything-claude-code"

[workspace.dependencies]
# Domain / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.22"
thiserror = "2"
anyhow = "1"
regex = "1"
walkdir = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Database / logging
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }
tracing-appender = "0.2"
notify = "7"

# Tarball extraction
flate2 = "1"
tar = "0.4"

# HTTP client
ureq = "3"

# Cryptography
sha2 = "0.10"

# System
libc = "0.2"

# Interactive
rustyline = "15"
crossterm = "0.29"

# Workspace crates
ecc-domain = { path = "crates/ecc-domain" }
ecc-ports = { path = "crates/ecc-ports" }
ecc-app = { path = "crates/ecc-app" }
ecc-infra = { path = "crates/ecc-infra" }
ecc-test-support = { path = "crates/ecc-test-support" }
ecc-flock = { path = "crates/ecc-flock" }

[profile.release]
strip = true
lto = true
