[package]
name = "ecc-app"
description = "Application use cases — orchestrates domain + ports"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecc-domain = { workspace = true }
ecc-ports = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
tracing = "0.1"
rayon = { workspace = true }

[dev-dependencies]
ecc-test-support = { workspace = true }
tracing-test = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
