[package]
name = "ecc-domain"
description = "Pure business logic for ECC — zero I/O dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = "1"
