[package]
name = "ecc-infra"
description = "Production adapters — OS filesystem, process executor, terminal I/O"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecc-ports = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
crossterm = { workspace = true }
rustyline = { workspace = true }
anyhow = { workspace = true }
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
