[package]
name = "ecc-infra"
description = "Production adapters — OS filesystem, process executor, terminal I/O"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecc-ports = { workspace = true }
rusqlite = { workspace = true }
tracing-appender = { workspace = true }
ecc-flock = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
crossterm = { workspace = true }
rustyline = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
tracing = "0.1"
toml = "0.8"
serde = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
