[package]
name = "ecc-integration-tests"
description = "Binary-level integration tests for the ECC CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
shell-words = "1"
sha2 = { workspace = true }
ecc-app = { workspace = true }
ecc-domain = { workspace = true }
ecc-ports = { workspace = true }
ecc-test-support = { workspace = true }
proptest = "1"
