[package]
name = "ecc-ports"
description = "Port trait definitions for ECC hexagonal architecture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecc-domain = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
