[package]
name = "ecc-workflow"
description = "Compiled workflow state machine for ECC hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ecc-workflow"
path = "src/main.rs"

[dependencies]
ecc-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
