[package]
name = "ecc-workflow"
description = "Compiled workflow state machine for ECC hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ecc-workflow"
path = "src/main.rs"

[dependencies]
ecc-domain = { workspace = true }
ecc-flock = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
