[package]
name = "ecc-workflow"
description = "Compiled workflow state machine for ECC hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ecc-workflow"
path = "src/main.rs"

[dependencies]
ecc-domain = { workspace = true }
ecc-app = { workspace = true }
ecc-infra = { workspace = true }
ecc-flock = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
