[package]
name = "ecc-domain"
description = "Pure business logic for ECC — zero I/O dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
ecc-ports = { workspace = true }

[dev-dependencies]
ecc-test-support = { workspace = true }
